gateway/src/main/resources/kubernetes/GatewayDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: harbor.registry.notypie.dev/apis/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
